meja/tests/row-pattern-wrong-args.meja
let f = fun (x : [> `A(int)]) => {
  switch (x) {
    | `B => true
    | `A(b) => b
    | _ => false
  };
};
